XP-1143 Replace "module" protocol usage